# aidb

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
apps/aidb-mac/: Package.swift  README.md
apps/aidb-mac/.build/: build.db  plugin-tools.yaml
apps/aidb-mac/.build/x86_64-apple-macosx/debug/: plugin-tools-description.json
apps/aidb-mac/.build/x86_64-apple-macosx/debug/AIDBMac.build/: AIDBClient.d  AIDBClient.swiftdeps  AIDBClient.swiftdeps~  AIDBMac.emit-module.d  AIDBMacApp.d  AIDBMacApp.swiftdeps  DesignSystem.d  DesignSystem.swiftdeps  Models.d  Models.swiftdeps  Views.d  Views.swiftdeps  master.priors  output-file-map.json  sources
apps/aidb-mac/.build/x86_64-apple-macosx/debug/AIDBMac.dSYM/Contents/: Info.plist
apps/aidb-mac/.build/x86_64-apple-macosx/debug/AIDBMac.product/: Objects.LinkFileList
apps/aidb-mac/.build/x86_64-apple-macosx/debug/ModuleCache/3C38VZUJTA5K7/: Accessibility-RCJSN2GG3RAR.pcm  ApplicationServices-3NXEUUZF9JJBD.pcm  AvailabilityMacros-1R8AB8N4VAFAG.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  CUPS-1HLHMKUB322XA.pcm  ColorSync-3EIM4S8RXNRVI.pcm  CoreData-1KHK1L2CYC2N6.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  CoreGraphics-1PSDCAYCIV3T9.pcm  CoreImage-39ZO87840M5PP.pcm  CoreText-3FAL1B4J38DIR.pcm  CoreTransferable-27T896KGHFB3R.pcm  CoreVideo-DBBGB2LXU3HG.pcm  DarwinFoundation-1W8U2OOUAA1YQ.pcm  DataDetection-R5W4QHNMPWVH.pcm  DeveloperToolsSupport-3SUCMSK9ZS2JA.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  IOSurface-26455DPS9NDS0.pcm  ImageIO-2ZSF831VT29UB.pcm  MachO-20RPYVQSX341K.pcm  Metal-1GCZV9N85NJOH.pcm  OSLog-218FBXNFJGY61.pcm  ObjectiveC-1G8H182PQX3QE.pcm  OpenGL-H89XJT7GTCP.pcm  QuartzCore-39A8LQKF980J1.pcm  Security-3QCVXOV25KK54.pcm  Spatial-1JZLH83HN83CS.pcm  SwiftShims-2IMTS4WWRU7VJ.pcm  SwiftUI-3DCHKT5UWXXCX.pcm  SwiftUICore-86HIVXUC6WOA.pcm  Symbols-3KC1789KJFX94.pcm  TargetConditionals-1C41IB3E7JLP3.pcm  UniformTypeIdentifiers-1OLJP4K3PLM48.pcm  XPC-T0ZXCAST7PE3.pcm  _Builtin_float-19KE09ZDXQ6Q3.pcm  _Builtin_inttypes-19KE09ZDXQ6Q3.pcm  _Builtin_iso646-19KE09ZDXQ6Q3.pcm  _Builtin_limits-19KE09ZDXQ6Q3.pcm  _Builtin_stdarg-19KE09ZDXQ6Q3.pcm  (+56 more)
apps/aidb-mac/.build/x86_64-apple-macosx/debug/Modules/: AIDBMac.swiftdoc  AIDBMac.swiftmodule  AIDBMac.swiftsourceinfo
apps/aidb-mac/.build/x86_64-apple-macosx/debug/index/store/v5/units/: AIDBClient.swift.o-3GBYMN3YRO9Y5  AIDBMacApp.swift.o-152POBYEL90E6  Accessibility-RCJSN2GG3RAR.pcm-CZX2BIC8H1K5  AppKit-2VI8NB39I5AT6.pcm-23OHW196KBQ16  ApplicationServices-3NXEUUZF9JJBD.pcm-20PO1QK4TYT3B  AvailabilityMacros-1R8AB8N4VAFAG.pcm-I2NKN6ESJO0T  CFNetwork-1PNPO1ORVQZLS.pcm-3FQ7QHL3UAHHB  CUPS-1HLHMKUB322XA.pcm-1ND8UPUYPG7R7  ColorSync-3EIM4S8RXNRVI.pcm-3QR456WPMXPTT  CoreData-1KHK1L2CYC2N6.pcm-1D8H4QSSKYOI6  CoreFoundation-16SA8WK3L6MQN.pcm-E1BJSR2N5QVB  CoreGraphics-1PSDCAYCIV3T9.pcm-1CM3ZJGWHHMJJ  CoreImage-39ZO87840M5PP.pcm-2OP0QAM4QT4MF  CoreServices-39NCTJOEW7PQ2.pcm-D9TK5IR8P5A  CoreText-3FAL1B4J38DIR.pcm-CV7T0PES2ANV  CoreTransferable-27T896KGHFB3R.pcm-3AF3S1ZYRELN7  CoreVideo-DBBGB2LXU3HG.pcm-QWMEIFA0BPNL  Darwin-1FXX23EKWOBA9.pcm-78CNMRN7UC1L  DarwinFoundation-1W8U2OOUAA1YQ.pcm-3F3BSBDZST87P  DataDetection-R5W4QHNMPWVH.pcm-26NPHJ5FO0HBP  (+121 more)
apps/aidb-mac/.swiftpm/xcode/package.xcworkspace/xcuserdata/vivekkumar.xcuserdatad/: UserInterfaceState.xcuserstate
apps/aidb-mac/AIDBMac.app/Contents/: Info.plist
apps/aidb-mac/Sources/AIDBMac/: AIDBClient.swift  AIDBMacApp.swift  DesignSystem.swift  Models.swift  Views.swift
crates/aidb-bench/: Cargo.toml
crates/aidb-bench/src/: advanced_bench.rs  jit_bench.rs  main.rs
crates/aidb-core/: Cargo.toml
crates/aidb-core/benches/: distance.rs
crates/aidb-core/examples/: basic.rs
crates/aidb-core/src/: adaptive.rs  lib.rs  quantization.rs  simd.rs
crates/aidb-index-adaptive/: Cargo.toml
crates/aidb-index-adaptive/src/: lib.rs
crates/aidb-index-bf/: Cargo.toml
crates/aidb-index-bf/src/: lib.rs
crates/aidb-index-hnsw/: Cargo.toml
crates/aidb-index-hnsw/src/: lib.rs
crates/aidb-monitor/: Cargo.toml
crates/aidb-monitor/src/: alerts.rs  dashboard.rs  health.rs  lib.rs  main.rs  tracing.rs
crates/aidb-monitor/templates/: dashboard.html
crates/aidb-server/: Cargo.toml
crates/aidb-server/src/: main.rs  sql.rs
crates/aidb-sql/: Cargo.toml
crates/aidb-sql/src/: jit.rs  lib.rs  partitioning.rs
crates/aidb-sql/src/execution/: batch.rs  join.rs  mod.rs  operators.rs  scheduler.rs
crates/aidb-sql/src/planner/: cardinality.rs  context.rs  cost.rs  heuristics.rs  logical.rs  memo.rs  mod.rs  rules.rs  table_ref.rs
crates/aidb-sql/tests/: federation.rs  parallel.rs  vectorized.rs
crates/aidb-storage/: Cargo.toml
crates/aidb-storage-engine/: Cargo.toml
crates/aidb-storage-engine/src/: buffer.rs  columnar.rs  compression.rs  distributed.rs  index.rs  lib.rs  memory.rs  mvcc.rs  page.rs  transaction.rs  vacuum.rs
crates/aidb-storage-engine/src/lsm/: bloom.rs  compaction.rs  memtable.rs  mod.rs  scheduler.rs  sstable.rs  tree.rs  wal.rs
crates/aidb-storage/src/: lib.rs  stats.rs  stats_refresh.rs
data/: docs.snapshot  test_collection.wal  time_entries.wal
deploy/: README.md  automated-oracle-deploy.sh  cleanup-oracle-resources.sh  complete-oracle-deployment.sh  deploy-always-free.sh  deploy-simple-amd.sh  oracle-capacity-hunter.sh  oracle-cloud-setup.sh  setup-aidb.sh
docs/: http-api.md  operations.md  query-optimizer-roadmap.md  roadmap.md  sql.md  vision.md
(+7 files in other folders)
