[package]
name = "aidb-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
rayon.workspace = true
rand.workspace = true
wide.workspace = true

[[bench]]
name = "distance"
harness = false

