[package]
name = "aidb-index-adaptive"
version = "0.1.0"
edition = "2021"

[dependencies]
aidb-core = { path = "../aidb-core" }
aidb-index-bf = { path = "../aidb-index-bf" }
aidb-index-hnsw = { path = "../aidb-index-hnsw" }
anyhow.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
tokio = { version = "1", features = ["full"] }
uuid.workspace = true