[package]
name = "aidb-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
aidb-core = { path = "../aidb-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
uuid.workspace = true
time.workspace = true
reqwest.workspace = true
rand.workspace = true
chrono.workspace = true
num_cpus.workspace = true