[package]
name = "aidb-sql"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
roxmltree = "0.20"
rstar = "0.11"
crossbeam.workspace = true
num_cpus.workspace = true
ordered-float = "4"

# JIT compilation dependencies (placeholder - add when implementing full Cranelift integration)
# cranelift-codegen = "0.104"
# cranelift-frontend = "0.104"
# cranelift-module = "0.104"
# cranelift-jit = "0.104"
# cranelift-native = "0.104"
# target-lexicon = "0.12"
