[package]
name = "aidb-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
aidb-core = { path = "../aidb-core" }
bincode.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
memmap2.workspace = true
log.workspace = true
async-trait.workspace = true
tokio.workspace = true

[dev-dependencies]
aidb-index-bf = { path = "../aidb-index-bf" }
tempfile.workspace = true
